# InfiniBench

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/DeepSeek/: DeepSeek-R1-Distill-8B.yaml
src/: cli.py
src/models/DeepSeek/: model.py
src/models/Llama/: model.py
src/ops/torch/: ops.py
src/toolkit/: tools.py  utils.py
test/: test.py
